# cyac_pyahocorasick

./: notes.txt  pyproject.toml  static_ioc_sample_30k.txt
matching_speed/: plot_maker_speed.py  speed_analysis_cyac.py  speed_analysis_pyahocorasick.py
memory_consumption/: memory_analysis_cyac.py  memory_analysis_pyahocorasick.py  plot_maker_memory.py
shared_buffer_cyac_test/: shared_buffer_processes.py  shared_buffer_test2.py  shared_buffer_test3.py
